Well, the create folders thing is suddenly working... after I disable the create folders thing.  It must hvae been user error before

--- a/config/env/includes/app_locations.yml
+++ b/config/env/includes/app_locations.yml
@@ -187,6 +187,12 @@ apps.tk-mari-projectmanager.location:
   type: app_store
   version: v1.2.0
 
+# ---- Custom Apps
+apps.tk-lazy_siouxsie.location:
+  name: tk-lazy_siouxsie
+  type: manual
+  version: v1.0.0
+
 ################################################################################
 # reference all of the common frameworks
 frameworks: '@frameworks'
