--- a/config/env/shot.yml
+++ b/config/env/shot.yml
@@ -31,20 +31,22 @@ includes:
 - ./includes/settings/tk-photoshopcc.yml
 - ./includes/settings/tk-shell.yml
 - ./includes/settings/tk-shotgun.yml
+#- ./includes/settings/tk-shotgun-folders.yml
 
 ################################################################################
 # configuration for all engines to load in a shot context
 
 engines:
-  tk-3dsmaxplus: "@settings.tk-3dsmaxplus.shot"
+#  tk-3dsmaxplus: "@settings.tk-3dsmaxplus.shot"
   tk-flame: "@settings.tk-flame.shot"
   tk-houdini: "@settings.tk-houdini.shot"
   tk-maya: "@settings.tk-maya.shot"
-  tk-motionbuilder: "@settings.tk-motionbuilder.shot"
+#  tk-motionbuilder: "@settings.tk-motionbuilder.shot"
   tk-nuke: "@settings.tk-nuke.shot"
   tk-photoshopcc: "@settings.tk-photoshopcc.shot"
   tk-shell: "@settings.tk-shell.shot"
   tk-shotgun: "@settings.tk-shotgun.shot"
+#  tk-shotgun-folders: "@settings.tk-shotgun-folders.shot"
 
 ################################################################################
 # reference all of the common frameworks
