--- a/config/env/asset.yml
+++ b/config/env/asset.yml
@@ -31,20 +31,22 @@ includes:
 - ./includes/settings/tk-photoshopcc.yml
 - ./includes/settings/tk-shell.yml
 - ./includes/settings/tk-shotgun.yml
+#- ./includes/settings/tk-shotgun-folders.yml
 
 ################################################################################
 # configuration for all engines to load in an asset context
 
 engines:
-  tk-3dsmaxplus: "@settings.tk-3dsmaxplus.asset"
+#  tk-3dsmaxplus: "@settings.tk-3dsmaxplus.asset"
   tk-houdini: "@settings.tk-houdini.asset"
   tk-mari: "@settings.tk-mari.asset"
   tk-maya: "@settings.tk-maya.asset"
-  tk-motionbuilder: "@settings.tk-motionbuilder.asset"
+#  tk-motionbuilder: "@settings.tk-motionbuilder.asset"
   tk-nuke: "@settings.tk-nuke.asset"
   tk-photoshopcc: "@settings.tk-photoshopcc.asset"
   tk-shell: "@settings.tk-shell.asset"
   tk-shotgun: "@settings.tk-shotgun.asset"
+#  tk-shotgun-folders: "@settings.tk-shotgun-folders.asset"
 
 ################################################################################
 # reference all of the common frameworks
