--- a/config/env/asset_step.yml
+++ b/config/env/asset_step.yml
@@ -24,21 +24,23 @@ includes:
 - ./includes/settings/tk-photoshopcc.yml
 - ./includes/settings/tk-shell.yml
 - ./includes/settings/tk-shotgun.yml
+#- ./includes/settings/tk-shotgun-folders.yml
 
 ################################################################################
 # configuration for all engines to load in an asset step context
 
 engines:
-  tk-3dsmaxplus: "@settings.tk-3dsmaxplus.asset_step"
+#  tk-3dsmaxplus: "@settings.tk-3dsmaxplus.asset_step"
   tk-houdini: "@settings.tk-houdini.asset_step"
   tk-mari: "@settings.tk-mari.asset_step"
   tk-maya: "@settings.tk-maya.asset_step"
-  tk-motionbuilder: "@settings.tk-motionbuilder.asset_step"
+#  tk-motionbuilder: "@settings.tk-motionbuilder.asset_step"
   tk-nuke: "@settings.tk-nuke.asset_step"
   tk-nukestudio: "@settings.tk-nuke.nukestudio.asset_step"
   tk-photoshopcc: "@settings.tk-photoshopcc.asset_step"
   tk-shell: "@settings.tk-shell.asset_step"
   tk-shotgun: "@settings.tk-shotgun.asset_step"
+#  tk-shotgun-folders: "@settings.tk-shotgun-folders.asset_step"
 
 ################################################################################
 # reference all of the common frameworks
