--- a/config/env/shot_step.yml
+++ b/config/env/shot_step.yml
@@ -23,21 +23,23 @@ includes:
 - ./includes/settings/tk-photoshopcc.yml
 - ./includes/settings/tk-shell.yml
 - ./includes/settings/tk-shotgun.yml
+#- ./includes/settings/tk-shotgun-folders.yml
 
 ################################################################################
 # configuration for all engines to load in a shot step context
 
 engines:
   # referencing the DCC-specific shot_step environments included above
-  tk-3dsmaxplus: "@settings.tk-3dsmaxplus.shot_step"
+#  tk-3dsmaxplus: "@settings.tk-3dsmaxplus.shot_step"
   tk-houdini: "@settings.tk-houdini.shot_step"
   tk-maya: "@settings.tk-maya.shot_step"
-  tk-motionbuilder: "@settings.tk-motionbuilder.shot_step"
+#  tk-motionbuilder: "@settings.tk-motionbuilder.shot_step"
   tk-nuke: "@settings.tk-nuke.shot_step"
   tk-nukestudio: "@settings.tk-nuke.nukestudio.shot_step"
   tk-photoshopcc: "@settings.tk-photoshopcc.shot_step"
   tk-shell: "@settings.tk-shell.shot_step"
   tk-shotgun: "@settings.tk-shotgun.shot_step"
+#  tk-shotgun-folders: "@settings.tk-shotgun-folders.shot_step"
 
 ################################################################################
 # reference all of the common frameworks
