--- a/config/env/includes/settings/tk-maya.yml
+++ b/config/env/includes/settings/tk-maya.yml
@@ -50,6 +50,7 @@ settings.tk-maya.asset_step:
     tk-multi-shotgunpanel: "@settings.tk-multi-shotgunpanel.maya"
     tk-multi-snapshot: "@settings.tk-multi-snapshot.maya.asset_step"
     tk-multi-workfiles2: "@settings.tk-multi-workfiles2.maya.asset_step"
+    tk-blaster: "@settings.tk-blaster.asset_step"
   menu_favourites:
   - {app_instance: tk-multi-workfiles2, name: File Open...}
   - {app_instance: tk-multi-snapshot, name: Snapshot...}
