--- a/config/env/includes/settings/tk-multi-publish2.yml
+++ b/config/env/includes/settings/tk-multi-publish2.yml
@@ -160,7 +160,7 @@ settings.tk-multi-publish2.mari.asset_step:
 
 # asset step
 settings.tk-multi-publish2.maya.asset_step:
-  collector: "{self}/collector.py:{engine}/tk-multi-publish2/basic/collector.py"
+  collector: "{self}/collector.py:{config}/tk-multi-publish2/maya_collector.py"
   collector_settings:
       Work Template: maya_asset_work
   publish_plugins:
@@ -181,12 +181,15 @@ settings.tk-multi-publish2.maya.asset_step:
     hook: "{self}/publish_file.py:{engine}/tk-multi-publish2/basic/publish_session_geometry.py"
     settings:
         Publish Template: asset_alembic_cache
+  - name: Fucked River
+    hook: "{self}/publish_file.py:{config}/tk-multi-publish2/maya/dookie.py"
+    settings: {}
   help_url: *help_url
   location: "@apps.tk-multi-publish2.location"
 
 # shot step
 settings.tk-multi-publish2.maya.shot_step:
-  collector: "{self}/collector.py:{engine}/tk-multi-publish2/basic/collector.py"
+  collector: "{self}/collector.py:{config}/tk-multi-publish2/maya_collector.py"
   collector_settings:
       Work Template: maya_shot_work
   publish_plugins:
