Ok.  I got their example to work in the publisher.  It's rudimentary, cluttered, and about as elegant as doing a pipeline in a word document, but I get it now... most of it at least.  There will still be a few issues that arise as I move forward.  Saving this so I can remove it. and start adding my own

--- a/config/core/templates.yml
+++ b/config/core/templates.yml
@@ -650,9 +650,9 @@ paths:
         definition: '@asset_publish_area/playblasts/maya/{Asset}_{task_name}_v{version}.mov'
     maya_asset_shader_network:
         definition: '@asset_root/publish/elements/shaders/{Asset}/{Asset}_{name}_{task_name}_shd_v{version}.mb'
+    maya_shader_network_publish:
+        definition: '@asset_root/publish/elements/shaders/{Asset}/{Asset}_{name}_{task_name}_mofucknShdr_v{version}.mb'
 
-    teste_balls:
-        definition: '@asset_root/publish/elements/shit_v{version}.jpg'
 
 
     #
